edited CSS and markup to prevent the footer from creating a horizontal scrollbar.

--- a/site/assets/yui.css
+++ b/site/assets/yui.css
@@ -527,7 +527,6 @@ ul.srchOptns li{margin-top:.3em;}
 	/* begin footer area */
 	#footermainCont{width:100%;}
 	#footerMaxCont {width:100%;clear:both;background-color:#eaeaea;border-top:1px solid #fff;}
-	#footerContainer{}
 	#footerInternal{float:left;text-align:left;}
 	#footerBotMainCont{width:100%;}
 	#footerBotMaxCont {width:100%;clear:both;background-color:#fff;border-top:1px solid #fff;}
@@ -569,23 +568,13 @@ ul.srchOptns li{margin-top:.3em;}
 	#boxmid2{float:left;border-right:1px solid #fff;padding:13px;width:655px;}
 	#boxmid3{float:left;padding:1em 0 1em .3em;}
 
-	/* begin footer area */
-	#JSfooterMain{width:100%;border-top:1px solid #d0d0d0;border-bottom:1px solid #d0d0d0;padding:0;margin:0;display:block;float:left;}
-	#JSfooterMax{width:100%;clear:both;background-color:#f5f5f5;border:0;padding:0;margin:0;border-top:1px solid #fff;border-bottom:1px solid #fff;display:block;float:left;}
-	#JSfooter{padding:0;margin:0;margin-left:auto;margin-right:auto;width:75em;display:block;}
-	#footerBotMainCont{width:100%;}
-	#footerBotMaxCont{width:100%;clear:both;background-color:#fff;border-top:0px;}
-	#footerBotMainCont a{color:#28b;text-decoration:none;}
-	#footerBotMainCont a:hover{color:#28b;text-decoration:underline;}
-	#footerBotContainer{margin-left:200px;background:#fff;}
-	#footerBotInternal{width:74.8em;float:left;text-align:left;}
-	#ydnfoot_bot{width:100%;padding:1.2em 0 2em 0;color:#bbb;font-size:93%;}
-	#footerLinks li { font-weight: bold; display: inline; list-style: none; padding-left: 8px; margin-left: 5px; border-left: 1px solid #bbbbbb; }
-	#footerLinks li.first { padding-left: 0px; margin-left: 0px; border-left: none; }
-	div#footerLegal{margin-top:1em;background:url('http://l.yimg.com/a/i/ydn/this-is-yahoo.gif') no-repeat top right;height:2.5em;}
-	div#footerLegal p{color:#666;margin:0;padding:0;font-size:93%;}
 
 
+	#footer3 {clear:both;background:url('http://l.yimg.com/a/i/ydn/this-is-yahoo.gif') no-repeat top right;margin:20px 10px 10px 0;height:20px;}
+	#footer3legal {padding-left:190px;padding-right:136px;padding-top:5px;}
+	#footer3legal p {color:#BBB;font-size:93%;}
+	#footer3legal a {color:#28b;text-decoration:none;}
+	#footer3legal a:hover {text-decoration:underline;}
 
 	/* end footer area*/
 
